--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <svg>
-            
-        </svg>
+        <div class="main">
+            <svg>
+                <line x1="250" y1="0" x2="250" y2="500" stroke="black" />
+                <line x1="0" y1="250" x2="500" y2="250" stroke="black" />
+            </svg>
+        </div>
     </body>
 </html>
