--- a/index.html
+++ b/index.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="vector.js"></script>
         <link rel="stylesheet" href="style.css">
         <meta charset="utf-8">
     </head>
     <body>
         <div class="main">
+            <div class="input-value">
+                <div style="margin-right: 2%;">m(a): <input type="text"/></div>
+                <div>theta(a): <input type="text"/></div>
+            </div>
+            <div class="input-value">
+                <div style="margin-right: 2%;">m(b): <input type="text"/></div>
+                <div>theta(b): <input type="text"/></div>
+            </div>
+            <div class="input-value">
+                <div style="margin-right: 2%;">m(c): <input type="text"/></div>
+                <div>theta(c): <input type="text"/></div>
+            </div>
+            <button class="generate-button">생성</button>
             <svg>
                 <line x1="250" y1="0" x2="250" y2="500" stroke="black" />
                 <line x1="0" y1="250" x2="500" y2="250" stroke="black" />
             </svg>
         </div>
+        <script src="vector.js"></script>
     </body>
 </html>
